feat: Adicionado endpoint Preferência
