# src/controllers/index.js
@@ -1,3 +1,4 @@
 module.exports = {
     Usuario: require('./usuario/_index'),
+    Preferencia: require('./preferencia/_index'),
 };
