# src/routes/index.js
@@ -1,9 +1,11 @@
 const usuario = require("./usuario");
+const preferencia = require("./preferencia");
 
 const url = "/api/v1/public";
 module.exports = (app) => {
   app.use(
     url,
     usuario,
+    preferencia
   );
 };
