# swagger_aws.yaml
@@ -8,6 +8,7 @@ host: "qje8wp1oc0.execute-api.us-east-1.amazonaws.com"
 basePath: "/Dev"
 tags:
 - name: "usuario"
+- name: "preferencia"
 schemes:
 - "https"
 consumes:
@@ -412,6 +413,107 @@ paths:
         passthroughBehavior: "when_no_match"
         type: "mock"
 
+  /preferencia:
+    get:
+      tags:
+      - "preferencia"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "limit"
+        in: "query"
+        required: false
+        type: "string"
+      - name: "page"
+        in: "query"
+        required: false
+        type: "string"
+      - name: "orderBy"
+        in: "query"
+        required: false
+        type: "string"
+      - name: "search"
+        in: "query"
+        required: false
+        type: "string"
+      - name: "lookup"
+        in: "query"
+        required: false
+        type: "string"
+      - name: "noPaginate"
+        in: "query"
+        required: false
+        type: "string"        
+      - name: "Authorization"
+        in: "header"
+        required: true
+        type: "string"
+      responses:
+        "200":
+          description: "200 response"
+          schema:
+            $ref: "#/definitions/Preferencia"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Allow-Methods:
+              type: "string"
+            Access-Control-Allow-Headers:
+              type: "string"
+            Access-Control-Max-Age:
+              type: "string"
+        "400":
+          description: "400 response"
+          schema:
+            $ref: "#/definitions/Error"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+        "401":
+          description: "401 response"
+          schema:
+            $ref: "#/definitions/Error"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+        "500":
+          description: "500 response"
+          schema:
+            $ref: "#/definitions/Error"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+        "403":
+          description: "403 response"
+          schema:
+            $ref: "#/definitions/Error"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+      security:
+      - api-gateway-auth: []
+      x-amazon-apigateway-integration:
+        httpMethod: "GET"
+        uri: "http://api.squad2.tech:3000/api/v1/public/preferencia"
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Max-Age: "'7200'"
+              method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST,PUT,DELETE'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        requestParameters:
+          integration.request.querystring.page: "method.request.querystring.page"
+          integration.request.querystring.limit: "method.request.querystring.limit"
+          integration.request.querystring.search: "method.request.querystring.search"
+          integration.request.querystring.lookup: "method.request.querystring.lookup"
+          integration.request.header.Authorization: "method.request.header.Authorization"
+          integration.request.querystring.orderBy: "method.request.querystring.orderBy"
+          integration.request.querystring.noPaginate: "method.request.querystring.noPaginate"          
+        passthroughBehavior: "when_no_match"
+        type: "http"
+
 securityDefinitions:
   api-gateway-auth:
     type: "apiKey"
@@ -437,7 +539,6 @@ definitions:
     - "usuario"
     - "nome"
     - "email"
-
     properties:
       id:
         type: "integer"
@@ -469,7 +570,21 @@ definitions:
         type: "array"
       preferencia:
         type: "array"
-
+  Preferencia:
+    type: "object"
+    required:
+    - "id"
+    - "grupo"
+    - "descricao"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      grupo:
+        type: "string"
+      descricao:
+        type: "string"
+      
 x-amazon-apigateway-gateway-responses:
   DEFAULT_4XX:
     statusCode: 401
